--- a/Dockerfile_Car
+++ b/Dockerfile_Car
@@ -31,22 +31,14 @@ RUN apt-get update && apt-get install -y \
         python-bloom \
         wget -y
 
-#nvidia-docker-2 necessary packages
-RUN apt-get update && apt-get install -y --no-install-recommends \
-        pkg-config \
-        libxau-dev \
-        libxdmcp-dev \
-        libxcb1-dev \
-        libxext-dev \
-        libx11-dev
-
 RUN apt-get update && apt-get install apt-utils -y
 RUN apt-get update && apt-get install ros-kinetic-grid-map -y
 RUN apt-get update && apt-get install ros-kinetic-joy -y
+RUN apt-get update && apt-get install ros-kinetic-robot-upstart -y
 RUN apt-get update && apt-get install python-rosdep ninja-build -y
-RUN apt-get update && apt-get install doxygen -y
 RUN apt-get update && apt-get install python-igraph -y
 RUN apt-get update && apt-get install python-sphinx -y
+RUN apt-get update && apt-get install python-pygame -y
 RUN apt-get update && apt-get install protobuf-compiler -y
 RUN apt-get update && apt-get install libgflags-dev -y
 RUN apt-get update && apt-get install libatlas-base-dev -y
@@ -64,44 +56,12 @@ RUN ln -s /usr/include/ignition/math2/ignition/math /usr/include/ignition/math
 RUN curl -sL https://deb.nodesource.com/setup_8.x | bash - && \
     apt-get install nodejs iputils-ping -y
 
-#RUN npm install npm@5.5.1 -g
 RUN npm install forever -g
 
 RUN  apt-get autoclean \
     && apt-get autoremove \
     && rm -rf /var/lib/apt/lists/*
 
-#nvidia-docker-2 necessary files
-COPY --from=nvidia/opengl:1.0-glvnd-runtime-ubuntu16.04 \
-  /usr/local/lib/x86_64-linux-gnu \
-  /usr/local/lib/x86_64-linux-gnu
-
-COPY --from=nvidia/opengl:1.0-glvnd-runtime-ubuntu16.04 \
-  /usr/local/share/glvnd/egl_vendor.d/10_nvidia.json \
-  /usr/local/share/glvnd/egl_vendor.d/10_nvidia.json
-
-RUN echo '/usr/local/lib/x86_64-linux-gnu' >> /etc/ld.so.conf.d/glvnd.conf && \
-    ldconfig && \
-    echo '/usr/local/$LIB/libGL.so.1' >> /etc/ld.so.preload && \
-    echo '/usr/local/$LIB/libEGL.so.1' >> /etc/ld.so.preload
-
-RUN ln -s /usr/local/lib/x86_64-linux-gnu/libGL.so.1 /usr/lib/x86_64-linux-gnu/libGL.so.1
-
-# nvidia-container-runtime
-ENV NVIDIA_VISIBLE_DEVICES \
-    ${NVIDIA_VISIBLE_DEVICES:-all}
-ENV NVIDIA_DRIVER_CAPABILITIES \
-    ${NVIDIA_DRIVER_CAPABILITIES:+$NVIDIA_DRIVER_CAPABILITIES,}graphics
-
-#LABEL com.nvidia.volumes.needed="nvidia_driver"
-#ENV PATH /usr/local/nvidia/bin:${PATH}
-#ENV LD_LIBRARY_PATH /usr/local/nvidia/lib:/usr/local/nvidia/lib64:${LD_LIBRARY_PATH}
-#ENV QT_DEVICE_PIXEL_RATIO=1
-
-RUN bash -c 'echo "source \$ROS_DIR/devel/setup.bash" >> /root/.bashrc'
-RUN bash -c 'echo "export QT_DEVICE_PIXEL_RATIO=1" >> /root/.bashrc'
-ENV ALIAS_DEF '"cd $ROS_DIR"'
-RUN bash -c 'echo "alias ros=${ALIAS_DEF}" >> /root/.bashrc'
-
 ADD ./alias.txt /root/alias
-RUN bash -c 'echo "source /root/alias" >> /root/.bashrc'
+COPY ./ros_entrypoint.sh /
+ENTRYPOINT ["/ros_entrypoint.sh"]
